// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_EuiPageInner component is rendered 1`] = `
<main
  class="euiPageInner css-afbd70-euiPageInner"
/>
`;

exports[`_EuiPageInner is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPageInner testClass1 testClass2 css-afbd70-euiPageInner"
  data-test-subj="test subject string"
/>
`;

exports[`_EuiPageInner paddingSize l is rendered 1`] = `
<div
  class="euiPageInner css-1988y1q-euiPageInner-l"
/>
`;

exports[`_EuiPageInner paddingSize m is rendered 1`] = `
<div
  class="euiPageInner css-bkn3wx-euiPageInner-m"
/>
`;

exports[`_EuiPageInner paddingSize none is rendered 1`] = `
<div
  class="euiPageInner css-afbd70-euiPageInner"
/>
`;

exports[`_EuiPageInner paddingSize s is rendered 1`] = `
<div
  class="euiPageInner css-13sfhhz-euiPageInner-s"
/>
`;

exports[`_EuiPageInner paddingSize xl is rendered 1`] = `
<div
  class="euiPageInner css-tsy6jk-euiPageInner-xl"
/>
`;

exports[`_EuiPageInner paddingSize xs is rendered 1`] = `
<div
  class="euiPageInner css-1o37y8r-euiPageInner-xs"
/>
`;

exports[`_EuiPageInner panelled is rendered 1`] = `
<div
  class="euiPageInner css-1g767o6-euiPageInner-panelled"
/>
`;
